# rev

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanprofile.txt  install.bat  install.sh  setup.py
source/: Base.h  CMakeLists.txt  HookSystem.h  InjectHooksMain.cpp  StdInc.h  config.h  dllmain.cpp  notsa.natvis
source/app/: app.cpp  app.h  app_camera.cpp  app_debug.h  app_game.cpp  app_input.cpp  app_input.h  app_light.cpp
source/app/platform/: SDLWrapper.cpp  SDLWrapper.hpp
source/extensions/: Casting.hpp  EntityRef.hpp  FixedFloat.hpp  FixedVector.hpp  ScriptCommands.cpp  ScriptCommands.h  WEnum.hpp  utility.hpp
source/extensions/Shapes/: AngledRect.cpp
source/game_sa/: 3dMarker.cpp  3dMarker.h  3dMarkers.cpp  3dMarkers.h  ActiveOccluder.cpp  ActiveOccluder.h  AutoPilot.h  Birds.cpp  BreakObject_c.cpp  BulletInfo.cpp  BulletTraces.cpp  BulletTraces.h  Buoyancy.cpp  CCurrentVehicle.cpp  CCurrentVehicle.h  CEntryExitManager.cpp  CGame.cpp  CHud.cpp  CHud.h  COnscreenCounterEntry.cpp  COnscreenCounterEntry.h  COnscreenTimer.cpp  COnscreenTimer.h  COnscreenTimerEntry.cpp  COnscreenTimerEntry.h  CPlaceName.cpp  CPlaceName.h  CRope.cpp  CRope.h  CUserDisplay.cpp  C_PcSave.cpp  Cam.cpp  Cam.h  Camera.cpp  Camera.h  CarAI.cpp  CarAI.h  CarCtrl.cpp  CarCtrl.h  CarEnterExit.cpp  (+227 more)
source/game_sa/Animation/: AnimAssocDescriptions.h  AnimAssociationData.h  AnimBlendAssociation.h  AnimBlendHierarchy.h  AnimBlendSequence.cpp  AnimBlendSequence.h  AnimBlendStaticAssociation.h  AnimManager.cpp
source/game_sa/Attractors/: PedAttractor.cpp  PedAttractor.h  PedAttractorPedPlacer.cpp  PedAttractorPedPlacer.h  PedShelterAttractor.cpp  PedShelterAttractor.h
source/game_sa/Audio/: AEAudioEnvironment.cpp  AEAudioUtility.cpp  AEAudioUtility.h  AESound.cpp  AESound.h  AudioEngine.cpp  AudioEngine.h  AudioZones.cpp  AudioZones.h
source/game_sa/Collision/: BoundingBox.h  Box.cpp  Box.h  ColAccel.cpp  ColLine.cpp  ColModel.cpp  ColModel.h  ColPoint.h  ColSphere.h  ColStore.cpp  ColStore.h  ColTriangle.cpp  Collision.cpp  CollisionData.cpp  CollisionData.h  ColourSet.cpp  ColourSet.h  Sphere.cpp
source/game_sa/Conversations/: ConversationForPed.cpp  ConversationForPed.h  ConversationNode.cpp  ConversationNode.h  Conversations.cpp  Conversations.h  PedToPlayerConversations.cpp  PedToPlayerConversations.h
source/game_sa/Core/: CPtrList.cpp  CPtrList.h  EntryInfoNode.h  ListItem_c.h  List_c.cpp  List_c.h  Matrix.cpp  Matrix.h  OctTree.cpp  Pool.h  PtrList.h  PtrListDoubleLink.cpp  PtrListDoubleLink.h  PtrListSingleLink.h  PtrNode.h  PtrNodeDoubleLink.cpp  PtrNodeDoubleLink.h  PtrNodeSingleLink.cpp  PtrNodeSingleLink.h  QuadTreeNode.cpp  QuadTreeNode.h  Rect.h  SArray.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h
source/game_sa/DecisionMakers/: Decision.cpp  Decision.h  DecisionMakerTypes.cpp  DecisionMakerTypes.h  DecisionMakerTypesFileLoader.cpp  DecisionMakerTypesFileLoader.h
source/game_sa/Entity/: AnimatedBuilding.cpp  Building.cpp  Building.h  CEntity.cpp  Entity.cpp  Entity.h  Physical.cpp  Physical.h
source/game_sa/Enums/: AnimationEnums.h  eCamMode.h  eCarDrivingStyle.h  eCarMission.h  eCarWheel.cpp  eControllerType.h  eGameState.h  eLanguage.h  eModelID.h  eOnscreenCounter.h  ePedType.h  eRadioID.h  eScriptCommands.h  eSurfaceType.h  eTaskType.h
source/game_sa/Events/: Event.h  EventAcquaintancePed.h  EventAcquaintancePedDislike.h  EventAcquaintancePedHate.h  EventAcquaintancePedHateBadlyLit.h  EventAcquaintancePedLike.h  EventAcquaintancePedRespect.h  EventAreaCodes.cpp  EventAreaCodes.h  EventAttractor.cpp  EventAttractor.h  EventBuildingCollision.cpp  EventBuildingCollision.h  EventCarUpsideDown.h  EventChatPartner.h  EventCopCarBeingStolen.h  EventCreatePartnerTask.h  EventDamage.cpp  EventDamage.h  EventDanger.cpp  EventDanger.h  EventDeadPed.cpp  EventDeadPed.h  EventDeath.cpp  EventDeath.h  EventDontJoinPlayerGroup.h  EventDraggedOutCar.cpp  EventDraggedOutCar.h  EventEditableResponse.cpp  EventEditableResponse.h  EventEscalator.h  EventFireNearby.h  EventGlobalGroup.h  EventGotKnockedOverByCar.cpp  EventGotKnockedOverByCar.h  EventGroup.cpp  EventGroupEvent.cpp  EventGroupEvent.h  EventGunAimedAt.cpp  EventGunAimedAt.h  (+82 more)
source/game_sa/Frontend/: FrontendScreensPC.h  MenuManager_Draw.cpp  MenuManager_Input.cpp  MenuManager_Internal.h  MenuManager_Pages.cpp  MenuManager_Process.cpp
source/game_sa/Fx/: EmissionInfo.h  Fx.h  FxEmitter.cpp  FxSystem.h
source/game_sa/Interior/: FurnitureGroup_c.cpp  FurnitureGroup_c.h  FurnitureSubGroup_c.cpp  FurnitureSubGroup_c.h  InteriorManager_c.cpp  Interior_c.h
source/game_sa/Memory/: HeapBlockDesc.cpp
source/game_sa/Models/: AtomicModelInfo.cpp  BaseModelInfo.cpp  BaseModelInfo.h  ClumpModelInfo.cpp  ModelInfo.cpp  ModelInfo.h  VehicleModelInfo.cpp  VehicleModelInfo.h
source/game_sa/Plant/: ProcObjectMan.cpp  ProcSurfaceInfo.cpp
source/game_sa/Pools/: BuildingPool.h  ColModelPool.h  DummyPool.h  EntryInfoNodePool.h  EventPool.h  IplDefPool.h  NodeRoutePool.h  ObjectPool.h  PatrolRoutePool.h  PedAttractorPool.h  PedIntelligencePool.h  PedPool.h  PointRoutePool.h  Pools.h  PtrNodeDoubleLinkPool.h  PtrNodeSingleLinkPool.h  TaskAllocatorPool.h  TaskPool.h  VehiclePool.h
source/game_sa/RenderWare/: RenderWare.h
source/game_sa/Scripts/: RunningScript.cpp  RunningScript.h  ScriptParam.h  Scripted2dEffects.cpp  Scripted2dEffects.h  TheScripts.cpp  TheScripts.h
source/game_sa/Tasks/: Task.h  TaskComplexSequence.cpp  TaskManager.cpp  TaskManager.h  TaskTimer.cpp
source/game_sa/Text/: CData.cpp  CData.h  CKeyArray.cpp  CKeyArray.h  CMissionTextOffsets.cpp  CMissionTextOffsets.h  CText.cpp  CText.h  Text.cpp
source/oswrapper/: oswrapper.h  oswrapper_win.cpp
source/reversiblebugfixes/: Bugs.hpp  ReversibleBugFix.hpp
source/reversiblehooks/: ReversibleHooks.cpp  ReversibleHooks.h
source/reversiblehooks/ReversibleHook/: ScriptCommand.h  Simple.cpp  Virtual.cpp
source/toolsmenu/: UIRenderer.cpp  UIRenderer.h  Utility.h
(+424 files in other folders)
